lab03: minor update. delete useless code
