# VikingsServer/internal/app/handler/handler.go
@@ -1,5 +1,3 @@
-//go:build !appengine && !appenginevm
-
 package handler
 
 import (
@@ -20,15 +18,10 @@ const (
 	addCityIntoHike = baseURL + "/cities/add-city-into-hike"
 	addCityImage    = baseURL + "/cities/upload-image"
 
-	hikesUpdateStatus            = baseURL + "/hikes-update-status"
 	hikes                        = baseURL + "/hikes"
 	hikeUpdateStatusForModerator = baseURL + "/hikes/update/status-for-moderator"
 	hikeUpdateStatusForUser      = baseURL + "/hikes/update/status-for-user"
 
-	users            = baseURL + "/users"
-	login            = users + "/login"
-	signup           = users + "/sign_up"
-	logout           = users + "/logout"
 	destinationHikes = baseURL + "/destination-hikes"
 )
 
@@ -54,9 +47,9 @@ func NewHandler(
 }
 
 func (h *Handler) RegisterHandler(router *gin.Engine) {
-	h.UserCRUD(router)
 	h.CityCRUD(router)
 	h.HikeCRUD(router)
+	h.DestinationHikesCRUD(router)
 	registerStatic(router)
 }
 
@@ -70,8 +63,6 @@ func (h *Handler) CityCRUD(router *gin.Engine) {
 }
 
 func (h *Handler) HikeCRUD(router *gin.Engine) {
-	//router.POST(hikes, h.AddHike)
-	//router.PUT(hikesUpdateStatus, h.UpdateHikeStatus)
 	router.GET(hikes, h.HikesList)
 	router.DELETE(hikes, h.DeleteHike)
 	router.PUT(hikeUpdateStatusForModerator, h.UpdateStatusForModerator)
@@ -79,13 +70,7 @@ func (h *Handler) HikeCRUD(router *gin.Engine) {
 	router.PUT(hikes, h.UpdateHike)
 }
 
-func (h *Handler) UserCRUD(router *gin.Engine) {
-	//router.GET(users, h.UsersList)
-}
-
 func (h *Handler) DestinationHikesCRUD(router *gin.Engine) {
-	router.GET(destinationHikes, h.DestinationHikesList)
-	router.POST(destinationHikes, h.AddDestinationToHike)
 	router.PUT(destinationHikes, h.UpdateDestinationHikeNumber)
 	router.DELETE(destinationHikes, h.DeleteDestinationToHike)
 }
@@ -94,12 +79,6 @@ func registerStatic(router *gin.Engine) {
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.Static("/static", "./static")
 	router.Static("/img", "./static")
-}
-
-func registerFrontHeaders(ctx *gin.Context) {
-	ctx.Header("Access-Control-Allow-Origin", "http://localhost:5173")
-	ctx.Header("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE")
-	ctx.Header("Access-Control-Allow-Headers", "Content-Type, Authorization")
 }
 
 // MARK: - Error handler
@@ -111,21 +90,15 @@ type errorResp struct {
 
 func (h *Handler) errorHandler(ctx *gin.Context, errorStatusCode int, err error) {
 	h.Logger.Error(err.Error())
-	ctx.JSON(errorStatusCode, gin.H{
-		"status":      "error",
-		"description": err.Error(),
+	ctx.JSON(errorStatusCode, errorResp{
+		Status:      "error",
+		Description: err.Error(),
 	})
 }
 
 // MARK: - Success handler
 
-type successResp struct {
-	Status string      `json:"status" example:"success"`
-	Data   interface{} `json:"data"`
-}
-
 func (h *Handler) successHandler(ctx *gin.Context, key string, data interface{}) {
-	registerFrontHeaders(ctx)
 	ctx.JSON(http.StatusOK, gin.H{
 		"status": "success",
 		key:      data,
